# vtuber_project

./: .gitignore  .gitmodules  CMakeLists.txt  JSONParser.hpp  TODO.md  WebCam.hpp  base64.hpp  chevan_chrono.h  chevan_thread.h  chevan_utils.h  chevan_utils.hpp  faceDetection.cpp  faceDetection2.cpp  install_opencv.txt  libavTest.cpp  main.cpp  main2.cpp  plan.txt  test.c  test.cpp  test.json  trainMNIST.cpp  utils.hpp  vrmLoader.hpp  vtuber.hpp  webcam.h  webcamTest.cpp  webcam_av.c  webcam_opencv.cpp  webcam_v4l2.c
kneuralnetwork/: CMakeLists.txt  _knn.cpp  _knn_NEAT.cpp  knn.c  knn.h  knn_DeepLearning.c  knn_DeepLearning.h  knn_DeepLearning_backpropagate.c  knn_DeepLearning_calculate.c  knn_NEAT.c  knn_NEAT.h
learnopengl/: 1.model_loading.fs  mesh.h  model.h  shader.h
models/: simple_morph_target.gltf
shaders/: MToon_deferedLighting.frag  MToon_shader.frag  MToon_shader.vert  MToon_shader_lighting.frag  deferedLighting_shader.frag  deferedLighting_shader.vert  fragment_shader.frag  fragment_shader.glsl  geometry_pass.frag  geometry_pass.vert  vertex_shader.glsl  vertex_shader.vert
